# Rust_shimei

./: README.md
mandelbrot/: Cargo.toml
mandelbrot/src/: main.rs
snake/: .gitignore  Cargo.toml
snake/snake/: README.md
snake/src/: draw.rs  game.rs  main.rs  menu.rs  snake.rs
tetriz_game/: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
tetriz_game/src/: App.tsx  board.rs  game.rs  lib.rs  pieces.rs  scoring.rs
tetriz_game/src/components/: Controls.tsx  GameBoard.tsx  GameInfo.tsx
tetriz_game/src/hooks/: useGame.ts
